--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ footer {
       </li><li><a href="halaman anyer.html">Pantai Anyer</a></li>
       <li><a href="halaman sawarna.html">Pantai Sawarna</a>
       <li><a href="halaman tanjung lesung.html">Pantai Tanjung Lesung</a></li>
-      <li><a href="About.html">ADVERTISIMENT</a></li>
+      <li><a href="ADVERTISIMENT.html">ADVERTISIMENT</a></li>
       <br/>
       <br/>
       <div class="statistika">
